{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 7,
  "lineage": "f6356f25-b358-326a-8615-4ae254346b4d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:622000977679:loadbalancer/app/express-todos-api-dev/566956de8ac97be7",
            "arn_suffix": "app/express-todos-api-dev/566956de8ac97be7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "express-todos-api-dev-1371801642.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:622000977679:loadbalancer/app/express-todos-api-dev/566956de8ac97be7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "express-todos-api-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a883734b6ba63afa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-028540a8a1d086d20"
              },
              {
                "subnet_id": "subnet-0962cde61437e6ac5"
              }
            ],
            "subnets": [
              "subnet-028540a8a1d086d20",
              "subnet-0962cde61437e6ac5"
            ],
            "tags_all": {
              "Component": "ECS Fargate",
              "CreatedAt": "2024-09-03",
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Owner": "Vinicius Silva",
              "Project": "AWS ECS Fargate with Terraform",
              "Repository": "https://github.com/viniciusjs07/terraform-nodejs-todo-api"
            },
            "vpc_id": "vpc-054e615a9aace1301",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:622000977679:listener/app/express-todos-api-dev/566956de8ac97be7/1d70f28ded57bab1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:622000977679:targetgroup/express-todos-api-dev/aa79363247edf0bf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:622000977679:listener/app/express-todos-api-dev/566956de8ac97be7/1d70f28ded57bab1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:622000977679:loadbalancer/app/express-todos-api-dev/566956de8ac97be7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Component": "ECS Fargate",
              "CreatedAt": "2024-09-03",
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Owner": "Vinicius Silva",
              "Project": "AWS ECS Fargate with Terraform",
              "Repository": "https://github.com/viniciusjs07/terraform-nodejs-todo-api"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.this",
            "aws_alb_target_group.this",
            "aws_security_group.alb",
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:622000977679:targetgroup/express-todos-api-dev/aa79363247edf0bf",
            "arn_suffix": "targetgroup/express-todos-api-dev/aa79363247edf0bf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:622000977679:targetgroup/express-todos-api-dev/aa79363247edf0bf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:622000977679:loadbalancer/app/express-todos-api-dev/566956de8ac97be7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "express-todos-api-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Component": "ECS Fargate",
              "CreatedAt": "2024-09-03",
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Owner": "Vinicius Silva",
              "Project": "AWS ECS Fargate with Terraform",
              "Repository": "https://github.com/viniciusjs07/terraform-nodejs-todo-api"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-054e615a9aace1301"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622000977679:security-group/sg-0a883734b6ba63afa",
            "description": "Controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a883734b6ba63afa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "engineering-dev-alb",
            "name_prefix": "",
            "owner_id": "622000977679",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "express-todos-api-dev-alb"
            },
            "tags_all": {
              "Component": "ECS Fargate",
              "CreatedAt": "2024-09-03",
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "express-todos-api-dev-alb",
              "Owner": "Vinicius Silva",
              "Project": "AWS ECS Fargate with Terraform",
              "Repository": "https://github.com/viniciusjs07/terraform-nodejs-todo-api"
            },
            "timeouts": null,
            "vpc_id": "vpc-054e615a9aace1301"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    }
  ]
}